tests/fail/mod_one_stack.avm
push int16(1)
mod
exit
